contrast fixes

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -17,6 +17,7 @@ body {
   color: $text-color;
   line-height: $text-line-height;
   letter-spacing: $letter-spacing;
+  font-size: 16px;
 }
 
 h1,
