--- a/src/scss/_helpers.scss
+++ b/src/scss/_helpers.scss
@@ -31,8 +31,8 @@
   align-items: center;
   position: fixed;
   top: 10px;
-  right: -95px;
-  width: 140px;
+  right: -160px;
+  width: 200px;
   height: 50px;
   padding: 5px;
   transition: all 0.4s ease;
@@ -41,7 +41,9 @@
   box-shadow: 0px 10px 10px -5px rgba(168, 168, 168, 1);
   .fa-cog,
   .fa-palette,
-  .fa-highlighter {
+  .fa-highlighter,
+  .fa-search-plus,
+  .fa-search-minus {
     cursor: pointer;
     color: #fff;
     transition: all 0.2s ease;
